# interpolator

./: .dockerignore  .gitignore  .readthedocs.yml  README.md  analysis.ipynb  docker-compose.yml  performance_analysis.ipynb  performance_analysis.py  pyproject.toml
backend/: Dockerfile
backend/fivedreg/: data.py  main.py  model.py  version.py
backend/fivedreg/data/: tmplry9wb33.pkl
backend/tests/: coverage_report.txt  test_data.py  test_main.py  test_model.py
docs/: requirements.txt
docs/source/: api_reference.rst  conf.py  index.rst  installation.rst  performance_analysis.rst  test_suite.rst  usage_examples.rst  user_guides.rst
docs/source/_static/: custom.css
frontend/: Dockerfile
frontend/src/app/: page.tsx
frontend/src/app/predict/: page.tsx
frontend/src/app/train/: page.tsx
frontend/src/app/upload/: page.tsx
scripts/: doc.sh  docker-end.sh  docker-logs.sh
