[build-system]
requires = ["setuptools", "wheel", "setuptools_scm", "build"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "interpolator"
dynamic = ["version"]
description = "A Python package for 5D data interpolation."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Randa He", email = "jh2604@cam.ac.uk" }
]
keywords = ["Interpolation", "Neural Network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

# Runtime dependencies
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "fastapi",
    "uvicorn",
    "scikit-learn",
    "python-multipart",
    "pytest",
    "pytest-cov",
    "httpx",
    "build",
    "sphinx"
] #argparse is a standard library

[project.urls]
"Documentation" = "https://your-readthedocs-url-here"
"Source" = "https://github.com/randa1029/interpolator"
"Issues" = "https://github.com/randa1029/interpolator/issues"


[tool.setuptools_scm]
write_to = "backend/fivedreg/version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"
tag_regex = "^(?P<version>\\d+\\.\\d+[a-zA-Z0-9]*?)$"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
"fivedreg" = ["data/*"]


#[project.scripts]
#interpolator = "fivedreg.cli:main"